swipe.js, generate

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.3/jquery.min.js"></script>
+    <script type="text/javascript" src="https://js.swipe.net/lib/jQueryRotate.js"></script>
+    <script type="text/javascript" src="https://js.swipe.net/lib/mediaelement/mediaelement-and-player.min.js"></script>
+    <script type="text/javascript" src="https://js.swipe.net/lib/snap.svg.js"></script>
+    <script type="text/javascript" src="https://js.swipe.net/js/swipe.js"></script>
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <!--
       Notice the use of %PUBLIC_URL% in the tag above.
