--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,10 @@
     <title>React App</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <div id="editor"></div>
+      <div id="preview"></div>
+    </div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
