attempt to play swipe

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,12 @@
   <body>
     <div id="root">
       <div id="editor"></div>
-      <div id="preview"></div>
+      <div id="swipe_back">
+          <img src="https://js.swipe.net/images/ArrowLeft.png" id="arrowleft">
+          <div id="swipe">
+          </div>
+          <img src="https://js.swipe.net/images/ArrowRight.png" id="arrowright">
+      </div>
     </div>
     <!--
       This HTML file is a template.
