--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,6 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.3/jquery.min.js"></script>
-    <script type="text/javascript" src="https://js.swipe.net/lib/jQueryRotate.js"></script>
-    <script type="text/javascript" src="https://js.swipe.net/lib/mediaelement/mediaelement-and-player.min.js"></script>
-    <script type="text/javascript" src="https://js.swipe.net/lib/snap.svg.js"></script>
-    <script type="text/javascript" src="https://js.swipe.net/js/swipe.js"></script>
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <!--
       Notice the use of %PUBLIC_URL% in the tag above.
@@ -23,12 +18,7 @@
   <body>
     <div id="root">
       <div id="editor"></div>
-      <div id="swipe_back">
-          <img src="https://js.swipe.net/images/ArrowLeft.png" id="arrowleft">
-          <div id="swipe">
-          </div>
-          <img src="https://js.swipe.net/images/ArrowRight.png" id="arrowright">
-      </div>
+      <iframe src="./swipe.html" width=400 height=300></iframe>
     </div>
     <!--
       This HTML file is a template.
