--- a/public/swipe.html
+++ b/public/swipe.html
@@ -19,49 +19,14 @@
 }
     </style>
     <script>
+function present(json) {
+    var swipe = JSON.parse(json);
+    SwipeUtil.initSwipe(swipe, "#swipe", "#swipe_back");
+    var swipe_book = SwipeUtil.getSwipeBook();
+    $("#arrowleft").on("click", function() { swipe_book.back(); });
+    $("#arrowright").on("click", function() { swipe_book.next(); });
+}
 $(document).ready(function () {
-  var json = {
-    "paging": "leftToRight",
-    "dimension":[600,600],
-    "templates": {
-        "pages": {
-            "photo": {
-                "elements":[
-                    { "h":600, "x":0, "img":"http://www.swipejs.net/sample3/1.jpg", "w":600, "y":0, "id": "1" }
-                ],
-                "transition": "fadeIn"
-            }
-        }
-    },
-    "title":"photo gallery",
-    "pages":[
-        {
-            "template":"photo",
-            "elements":[ {"id":"1"} ]
-        },
-        {
-            "template":"photo",
-            "elements":[{"id":"1", "img": "http://www.swipejs.net/sample3/2.jpg"} ]
-        },
-        {
-            "template":"photo",
-            "elements":[{"id":"1", "img": "http://www.swipejs.net/sample3/3.jpg"} ]
-        },
-        {
-            "template":"photo",
-            "elements":[{"id":"1", "img": "http://www.swipejs.net/sample3/4.jpg"} ]
-        },
-        {
-            "template":"photo",
-            "elements":[{"id":"1", "img": "http://www.swipejs.net/sample3/5.jpg"} ]
-        }
-    ],
-    "type":"net.swipe.swipe"
-  };
-  SwipeUtil.initSwipe(json, "#swipe", "#swipe_back");
-  var swipe_book = SwipeUtil.getSwipeBook();
-  $("#arrowleft").on("click", function() { swipe_book.back(); });
-  $("#arrowright").on("click", function() { swipe_book.next(); });
 });
     </script>
   </head>
