--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
   <body>
     <div id="root">
       <div id="editor"></div>
-      <iframe src="./swipe.html" width=400 height=300 id='preview'></iframe>
+      <iframe src="./swipe.html" id='preview'></iframe>
     </div>
     <!--
       This HTML file is a template.
