--- a/public/swipe.html
+++ b/public/swipe.html
@@ -32,10 +32,10 @@ $(document).ready(function () {
   </head>
   <body>
       <div id="swipe_back">
-          <img src="https://js.swipe.net/images/ArrowLeft.png" id="arrowleft">
-          <div id="swipe">
+          <img src='https://js.swipe.net/images/ArrowLeft.png' id='arrowleft'>
+          <div id='swipe'>
           </div>
-          <img src="https://js.swipe.net/images/ArrowRight.png" id="arrowright">
+          <img src='https://js.swipe.net/images/ArrowRight.png' id='arrowright'>
       </div>
   </body>
 </html>
