--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,9 @@
   <body>
     <div id="root">
       <div id="editor"></div>
-      <iframe src="./preview.html" id='preview'></iframe>
+      <div id="preview_frame">
+        <iframe src="./preview.html" id='preview'></iframe>
+      </div>
     </div>
     <!--
       This HTML file is a template.
