--- a/public/index.html
+++ b/public/index.html
@@ -16,12 +16,7 @@
     <title>React App</title>
   </head>
   <body>
-    <div id="root">
-      <div id="editor"></div>
-      <div id="preview_frame">
-        <iframe src="./preview.html" id='preview'></iframe>
-      </div>
-    </div>
+    <div id="root" />
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
