--- a/public/preview.html
+++ b/public/preview.html
@@ -42,11 +42,11 @@ $(document).ready(function () {
   </head>
   <body style="overflow:hidden;background:yellow">
       <div id="root">
-        <div id="swipe_back" style="width:400;height:400">
+        <div id="swipe_back" style="width:100%">
           <div id='swipe'>
           </div>
         </div>
-        <div style="width:400;height:100;background:#ffc">
+        <div style="width:100%;height:100;background:#ffc">
           <img src='https://js.swipe.net/images/ArrowRight.png' id='arrowright'>
           <img src='https://js.swipe.net/images/ArrowLeft.png' id='arrowleft'>
         </div>
